--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -779,22 +779,22 @@
                                                         <span v-html="aplicativo_diners_tarjeta_diners.nc_facturar"></span>
                                                     </td>
                                                 </tr>
+{#                                                <tr>#}
+{#                                                    <td><strong>GASTOS DE COBRANZA / OTROS</strong></td>#}
+{#                                                    <td>#}
+{#                                                        <input type="text" class="form-control form-control-sm"#}
+{#                                                               v-on:keyup="calcularValoresDiners"#}
+{#                                                               v-model="aplicativo_diners_tarjeta_diners.gastos_cobranza"#}
+{#                                                               placeholder="GASTOS DE COBRANZA / OTROS" v-autoname/>#}
+{#                                                    </td>#}
+{#                                                </tr>#}
                                                 <tr>
-                                                    <td><strong>GASTOS DE COBRANZA / OTROS</strong></td>
-                                                    <td>
-                                                        <input type="text" class="form-control form-control-sm"
-                                                               v-on:keyup="calcularValoresDiners"
-                                                               v-model="aplicativo_diners_tarjeta_diners.gastos_cobranza"
-                                                               placeholder="GASTOS DE COBRANZA / OTROS" v-autoname/>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td><strong>VALOR OTRAS TARJETAS</strong></td>
+                                                    <td><strong>VALOR OTROS GASTOS</strong></td>
                                                     <td>
                                                         <input type="text" class="form-control form-control-sm"
                                                                v-on:keyup="calcularValoresDiners"
                                                                v-model="aplicativo_diners_tarjeta_diners.valor_otras_tarjetas"
-                                                               placeholder="VALOR OTRAS TARJETAS" v-autoname/>
+                                                               placeholder="VALOR OTROS GASTOS" v-autoname/>
                                                     </td>
                                                 </tr>
                                                 </tbody>
@@ -1292,22 +1292,22 @@
                                                         <span v-html="aplicativo_diners_tarjeta_interdin.nc_facturar"></span>
                                                     </td>
                                                 </tr>
+{#                                                <tr>#}
+{#                                                    <td><strong>GASTOS DE COBRANZA / OTROS</strong></td>#}
+{#                                                    <td>#}
+{#                                                        <input type="text" class="form-control form-control-sm"#}
+{#                                                               v-on:keyup="calcularValoresInterdin"#}
+{#                                                               v-model="aplicativo_diners_tarjeta_interdin.gastos_cobranza"#}
+{#                                                               placeholder="GASTOS DE COBRANZA / OTROS" v-autoname/>#}
+{#                                                    </td>#}
+{#                                                </tr>#}
                                                 <tr>
-                                                    <td><strong>GASTOS DE COBRANZA / OTROS</strong></td>
-                                                    <td>
-                                                        <input type="text" class="form-control form-control-sm"
-                                                               v-on:keyup="calcularValoresInterdin"
-                                                               v-model="aplicativo_diners_tarjeta_interdin.gastos_cobranza"
-                                                               placeholder="GASTOS DE COBRANZA / OTROS" v-autoname/>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td><strong>VALOR OTRAS TARJETAS</strong></td>
+                                                    <td><strong>VALOR OTROS GASTOS</strong></td>
                                                     <td>
                                                         <input type="text" class="form-control form-control-sm"
                                                                v-on:keyup="calcularValoresInterdin"
                                                                v-model="aplicativo_diners_tarjeta_interdin.valor_otras_tarjetas"
-                                                               placeholder="VALOR OTRAS TARJETAS" v-autoname/>
+                                                               placeholder="VALOR OTROS GASTOS" v-autoname/>
                                                     </td>
                                                 </tr>
                                                 </tbody>
@@ -1794,22 +1794,22 @@
                                                         <span v-html="aplicativo_diners_tarjeta_discover.nc_facturar"></span>
                                                     </td>
                                                 </tr>
+{#                                                <tr>#}
+{#                                                    <td><strong>GASTOS DE COBRANZA / OTROS</strong></td>#}
+{#                                                    <td>#}
+{#                                                        <input type="text" class="form-control form-control-sm"#}
+{#                                                               v-on:keyup="calcularValoresDiscover"#}
+{#                                                               v-model="aplicativo_diners_tarjeta_discover.gastos_cobranza"#}
+{#                                                               placeholder="GASTOS DE COBRANZA / OTROS" v-autoname/>#}
+{#                                                    </td>#}
+{#                                                </tr>#}
                                                 <tr>
-                                                    <td><strong>GASTOS DE COBRANZA / OTROS</strong></td>
-                                                    <td>
-                                                        <input type="text" class="form-control form-control-sm"
-                                                               v-on:keyup="calcularValoresDiscover"
-                                                               v-model="aplicativo_diners_tarjeta_discover.gastos_cobranza"
-                                                               placeholder="GASTOS DE COBRANZA / OTROS" v-autoname/>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td><strong>VALOR OTRAS TARJETAS</strong></td>
+                                                    <td><strong>VALOR OTROS GASTOS</strong></td>
                                                     <td>
                                                         <input type="text" class="form-control form-control-sm"
                                                                v-on:keyup="calcularValoresDiscover"
                                                                v-model="aplicativo_diners_tarjeta_discover.valor_otras_tarjetas"
-                                                               placeholder="VALOR OTRAS TARJETAS" v-autoname/>
+                                                               placeholder="VALOR OTROS GASTOS" v-autoname/>
                                                     </td>
                                                 </tr>
                                                 </tbody>
@@ -2293,22 +2293,22 @@
                                                         <span v-html="aplicativo_diners_tarjeta_mastercard.nc_facturar"></span>
                                                     </td>
                                                 </tr>
+{#                                                <tr>#}
+{#                                                    <td><strong>GASTOS DE COBRANZA / OTROS</strong></td>#}
+{#                                                    <td>#}
+{#                                                        <input type="text" class="form-control form-control-sm"#}
+{#                                                               v-on:keyup="calcularValoresMastercard"#}
+{#                                                               v-model="aplicativo_diners_tarjeta_mastercard.gastos_cobranza"#}
+{#                                                               placeholder="GASTOS DE COBRANZA / OTROS" v-autoname/>#}
+{#                                                    </td>#}
+{#                                                </tr>#}
                                                 <tr>
-                                                    <td><strong>GASTOS DE COBRANZA / OTROS</strong></td>
-                                                    <td>
-                                                        <input type="text" class="form-control form-control-sm"
-                                                               v-on:keyup="calcularValoresMastercard"
-                                                               v-model="aplicativo_diners_tarjeta_mastercard.gastos_cobranza"
-                                                               placeholder="GASTOS DE COBRANZA / OTROS" v-autoname/>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td><strong>VALOR OTRAS TARJETAS</strong></td>
+                                                    <td><strong>VALOR OTROS GASTOS</strong></td>
                                                     <td>
                                                         <input type="text" class="form-control form-control-sm"
                                                                v-on:keyup="calcularValoresMastercard"
                                                                v-model="aplicativo_diners_tarjeta_mastercard.valor_otras_tarjetas"
-                                                               placeholder="VALOR OTRAS TARJETAS" v-autoname/>
+                                                               placeholder="VALOR OTROS GASTOS" v-autoname/>
                                                     </td>
                                                 </tr>
                                                 </tbody>
