--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -2597,8 +2597,8 @@
 
                 calcularValoresInterdin: function () {
                     var self = this;
-                    alert(self.aplicativo_diners_tarjeta_diners.unificar_deudas);
                     if(self.aplicativo_diners_tarjeta_interdin.unificar_deudas == 'SI') {
+                        console.log(self.aplicativo_diners_tarjeta_diners.unificar_deudas);
                         if(self.aplicativo_diners_tarjeta_diners.length > 0) {
                             self.aplicativo_diners_tarjeta_diners.unificar_deudas = 'NO';
                             self.calcularValoresDiners();
