--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -2598,8 +2598,7 @@
                 calcularValoresInterdin: function () {
                     var self = this;
                     if(self.aplicativo_diners_tarjeta_interdin.unificar_deudas == 'SI') {
-                        console.log(self.aplicativo_diners_tarjeta_diners);
-                        if(self.aplicativo_diners_tarjeta_diners.length > 0) {
+                        if(typeof(self.aplicativo_diners_tarjeta_diners.id) != "undefined" && self.aplicativo_diners_tarjeta_diners.id !== null) {
                             self.aplicativo_diners_tarjeta_diners.unificar_deudas = 'NO';
                             self.calcularValoresDiners();
                             app.$forceUpdate();
