--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -2566,12 +2566,12 @@
                 calcularValoresDiners: function () {
                     var self = this;
                     if(self.aplicativo_diners_tarjeta_diners.unificar_deudas == 'SI') {
-                        if(self.aplicativo_diners_tarjeta_interdin.length > 0) {
+                        if(typeof(self.aplicativo_diners_tarjeta_interdin.id) != "undefined" && self.aplicativo_diners_tarjeta_interdin.id !== null) {
                             self.aplicativo_diners_tarjeta_interdin.unificar_deudas = 'NO';
                             self.calcularValoresInterdin();
                             app.$forceUpdate();
                         }
-                        if(self.aplicativo_diners_tarjeta_discover.length > 0) {
+                        if(typeof(self.aplicativo_diners_tarjeta_discover.id) != "undefined" && self.aplicativo_diners_tarjeta_discover.id !== null) {
                             self.aplicativo_diners_tarjeta_discover.unificar_deudas = 'NO';
                             self.calcularValoresDiscover();
                             app.$forceUpdate();
@@ -2603,7 +2603,7 @@
                             self.calcularValoresDiners();
                             app.$forceUpdate();
                         }
-                        if(self.aplicativo_diners_tarjeta_discover.length > 0) {
+                        if(typeof(self.aplicativo_diners_tarjeta_discover.id) != "undefined" && self.aplicativo_diners_tarjeta_discover.id !== null) {
                             self.aplicativo_diners_tarjeta_discover.unificar_deudas = 'NO';
                             self.calcularValoresDiscover();
                             app.$forceUpdate();
@@ -2632,12 +2632,12 @@
                 calcularValoresDiscover: function () {
                     var self = this;
                     if(self.aplicativo_diners_tarjeta_discover.unificar_deudas == 'SI') {
-                        if(self.aplicativo_diners_tarjeta_diners.length > 0) {
+                        if(typeof(self.aplicativo_diners_tarjeta_diners.id) != "undefined" && self.aplicativo_diners_tarjeta_diners.id !== null) {
                             self.aplicativo_diners_tarjeta_diners.unificar_deudas = 'NO';
                             self.calcularValoresDiners();
                             app.$forceUpdate();
                         }
-                        if(self.aplicativo_diners_tarjeta_interdin.length > 0) {
+                        if(typeof(self.aplicativo_diners_tarjeta_interdin.id) != "undefined" && self.aplicativo_diners_tarjeta_interdin.id !== null) {
                             self.aplicativo_diners_tarjeta_interdin.unificar_deudas = 'NO';
                             self.calcularValoresInterdin();
                             app.$forceUpdate();
