--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -895,7 +895,7 @@
                                                                 v-on:change="calcularValoresDiners"
                                                                 v-model="aplicativo_diners_tarjeta_diners.unificar_deudas"
                                                                 placeholder="Seleccione una opción"
-                                                                name="unificar_deudas_diners" id="unificar_deudas_diners" v-autoname>
+                                                                name="unificar_deudas_diners" id="unificar_deudas_diners">
                                                             <option value="NO">NO</option>
                                                             <option value="SI">SI</option>
                                                         </select>
@@ -1398,7 +1398,7 @@
                                                                 v-on:change="calcularValoresInterdin"
                                                                 v-model="aplicativo_diners_tarjeta_interdin.unificar_deudas"
                                                                 placeholder="Seleccione una opción"
-                                                                name="unificar_deudas_interdin" id="unificar_deudas_interdin" v-autoname>
+                                                                name="unificar_deudas_interdin" id="unificar_deudas_interdin">
                                                             <option value="NO">NO</option>
                                                             <option value="SI">SI</option>
                                                         </select>
@@ -1901,7 +1901,7 @@
                                                                 v-on:change="calcularValoresDiscover"
                                                                 v-model="aplicativo_diners_tarjeta_discover.unificar_deudas"
                                                                 placeholder="Seleccione una opción"
-                                                                name="unificar_deudas_discover" id="unificar_deudas_discover" v-autoname>
+                                                                name="unificar_deudas_discover" id="unificar_deudas_discover">
                                                             <option value="NO">NO</option>
                                                             <option value="SI">SI</option>
                                                         </select>
